--- a/web/resources/css/style.css
+++ b/web/resources/css/style.css
@@ -8,7 +8,7 @@
     text-align: center;
     font-size: 1.05em;
     text-shadow: 1px 2px 2px black;
-    color:#efbbcf;
+    color:#27281e;
 }
 
 aside{
@@ -17,35 +17,35 @@ aside{
 }
 
 
-header{
+.header{
     text-align: center;
     font-size: 1.05em;
     top: 0;
 }
 
-footer{
+.footer{
     font-size: 1.05em;
     bottom: 0;
 }
 
-header, footer{
+.header, .footer{
     width: 100%;
     position: fixed;
-    color:#efbbcf;
-    background-color: #8675a9;
+    color:#27281e;
+    background-color: #656d44;
     left: 0;
 }
 
 
 
 body {
-    background-color: #c3aed6;
+    background-color: #e0e2db;
     padding-top: 9%;
     padding-bottom: 10%;
 }
 
 main{
-    background-color: #c3aed6;
+    background-color: #e0e2db;
     top: 5%;
     margin-left: 10%;
     margin-right: 10%;
@@ -61,11 +61,11 @@ main{
     text-align: center;
     font-size: 25px;
     text-decoration: none;
-    color: #efbbcf;
+    color: #27281e;
 }
 
 #resultTable td, .radio td{
-    border-right: 1px solid #8675a9;
+    border-right: 1px solid #27281e;
     font-size: 20px;
 }
 
@@ -75,7 +75,7 @@ main{
 }
 
 input[type=button]{
-    background-color: #8675a9;
+    background-color: #27281e;
     padding: 0;
     width: 120px;
     height: 50px;
@@ -94,8 +94,8 @@ input[type=button]{
 }
 
 input[type=text]{
-    background-color: #8675a9;
-    color: #efbbcf;
+    background-color: #27281e;
+    color: #e0e2db;
     padding: 0;
     width: 140px;
     height: 30px;
