--- a/web/resources/css/style.css
+++ b/web/resources/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Trintel";
-    src: url("../fonts/Trintel.ttf");
+    src: url("#{resource['fonts/Trintel.ttf']}");
 }
 
 * {
@@ -19,12 +19,12 @@ aside{
 
 .header{
     text-align: center;
-    font-size: 1.05em;
+    font-size: 0.9em;
     top: 0;
 }
 
 .footer{
-    font-size: 1.05em;
+    font-size: 2em;
     bottom: 0;
 }
 
@@ -37,9 +37,10 @@ aside{
 }
 
 
-
 body {
-    background-color: #e0e2db;
+    cursor: url("https://images.app.goo.gl/HqPBZjEqR9J2MRox8"), auto;
+    background: url("#{resource['img/tank_bg.jpg']}") no-repeat;
+    background-size: 100%;
     padding-top: 9%;
     padding-bottom: 10%;
 }
@@ -59,14 +60,14 @@ main{
 
 #credit > a {
     text-align: center;
-    font-size: 25px;
+    font-size: 2em;
     text-decoration: none;
     color: #27281e;
 }
 
 #resultTable td, .radio td{
     border-right: 1px solid #27281e;
-    font-size: 20px;
+    font-size: 2em;
 }
 
 #resultTable td, #resultTable th, .radio_btn td, .radio_btn th{
@@ -74,18 +75,6 @@ main{
     padding: 8px;
 }
 
-input[type=button]{
-    background-color: #27281e;
-    padding: 0;
-    width: 120px;
-    height: 50px;
-    box-sizing: border-box;
-    border-collapse: collapse;
-    border-radius:6px;
-    text-align: center;
-    font-size: 20px;
-    cursor: pointer;
-}
 
 .flying{
     position: fixed;
@@ -103,7 +92,7 @@ input[type=text]{
     border-collapse: collapse;
     border-radius:6px;
     text-align: center;
-    font-size: 20px;
+    font-size: 2em;
     cursor: text;
 }
 
@@ -114,17 +103,27 @@ input[type=text]{
 .radio input[type=radio]{
     text-align: center;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 2em;
 }
 
 .choicebox{
     margin-left: 40%;
 }
 
-.choicebox input[type=button]{
-    width: 30px;
-    height: 30px;
-    text-align: center;
+#points thead tbody{
+    border-right: 1px solid #27281e;
+    font-size: 2em;
+
+}
+
+
+.form{
+    background-color: #656d44;
+    width: 30%;
+    height: 50%;
+    margin-left:35%;
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 
 
