--- a/web/resources/css/style.css
+++ b/web/resources/css/style.css
@@ -25,6 +25,7 @@ aside{
 
 .footer{
     font-size: 2em;
+    border: 2px solid black;
     bottom: 0;
 }
 
@@ -39,7 +40,7 @@ aside{
 
 body {
     cursor: url("https://images.app.goo.gl/HqPBZjEqR9J2MRox8"), auto;
-    background: url("#{resource['img/tank_bg.jpg']}") no-repeat;
+    background: url("#{resource['img/tank_bg.jpg']}") repeat;
     background-size: 100%;
     padding-top: 9%;
     padding-bottom: 10%;
